--- a/docs/use-the-network/devices/development/embit/emb-lr1280s.mdx
+++ b/docs/use-the-network/devices/development/embit/emb-lr1280s.mdx
@@ -1,7 +1,8 @@
 ---
 id: emb-lr1280s
-hide_title: true
-title: EMB-LR1280S
+title: Emb-Lr1280S
+pagination_label: Emb Lr1280S
+sidebar_label: Emb-Lr1280S
 description:
   The new LoRa® 2.4 Ghz Embit solution to connect your sensors and actuators leveraging both the
   advantages of LoRa® long range modulation and 2.4 Ghz RF properties and regulation. It offers a
@@ -9,7 +10,6 @@ description:
   perfect solution for many industrial applications with the aim of ensuring worldwide deployment
   and enhanced transmission rate.
 image: img/use-the-network/devices/development/embit/emb-lr1280s-top.jpg
-sidebar_label: EMB-LR1280S
 slug: /use-the-network/devices/development/embit/emb-lr1280s
 ---
 
