--- a/docs/use-the-network/devices/development/heltec/cubecell-1-2-aa-node.mdx
+++ b/docs/use-the-network/devices/development/heltec/cubecell-1-2-aa-node.mdx
@@ -1,12 +1,12 @@
 ---
 id: cubecell-1-2-aa-node
-hide_title: true
-title: HTCC-AB02A
+title: Htcc-Ab02A
+pagination_label: Cubecell 1 2 Aa Node
+sidebar_label: Htcc-Ab02A
 description:
   HTCC-AB02A is a Dev-Board. Friendly designed for developers, easy to verify communication
   solutions.
 image: img/use-the-network/devices/development/heltec/cubecell-1-2-aa-node.png
-sidebar_label: HTCC-AB02A
 slug: /use-the-network/devices/development/heltec/cubecell-1-2-aa-node
 ---
 
