--- a/docs/use-the-network/devices/development/heltec/cubecell-dev-board/cubecell-dev-board.mdx
+++ b/docs/use-the-network/devices/development/heltec/cubecell-dev-board/cubecell-dev-board.mdx
@@ -1,12 +1,12 @@
 ---
 id: cubecell-dev-board
-hide_title: true
-title: HTCC-AB01
+title: Htcc-Ab01
+pagination_label: Cubecell Dev Board
+sidebar_label: Htcc-Ab01
 description:
   HTCC-AB01 is a Dev-Board. Friendly designed for developers, easy to verify communication
   solutions.
 image: img/use-the-network/devices/development/heltec/cubecell-dev-board.png
-sidebar_label: HTCC-AB01
 slug: /use-the-network/devices/development/heltec/cubecell-dev-board
 ---
 
