--- a/docs/use-the-network/devices/development/heltec/cubecell-module-plus.mdx
+++ b/docs/use-the-network/devices/development/heltec/cubecell-module-plus.mdx
@@ -1,12 +1,12 @@
 ---
 id: cubecell-module-plus
-hide_title: true
-title: HTCC-AM02
+title: Htcc-Am02
+pagination_label: Cubecell Module Plus
+sidebar_label: Htcc-Am02
 description:
   HTCC-AM02 is a Module. Supports AT transparent transmission commands, can be directly integrated
   into the application circuit.
 image: img/use-the-network/devices/development/heltec/cubecell-module-plus.png
-sidebar_label: HTCC-AM02
 slug: /use-the-network/devices/development/heltec/cubecell-module-plus
 ---
 
