--- a/docs/use-the-network/devices/development/heltec/cubecell-module.mdx
+++ b/docs/use-the-network/devices/development/heltec/cubecell-module.mdx
@@ -1,12 +1,12 @@
 ---
 id: cubecell-module
-hide_title: true
-title: HTCC-AM01
+title: Htcc-Am01
+pagination_label: Cubecell Module
+sidebar_label: Htcc-Am01
 description:
   HTCC-AM01 is a Module. Supports AT transparent transmission commands, can be directly integrated
   into the application circuit.
 image: img/use-the-network/devices/development/heltec/cubecell-module.png
-sidebar_label: HTCC-AM01
 slug: /use-the-network/devices/development/heltec/cubecell-module
 ---
 
