--- a/docs/use-the-network/devices/development/heltec/lora-kit-151.mdx
+++ b/docs/use-the-network/devices/development/heltec/lora-kit-151.mdx
@@ -1,10 +1,10 @@
 ---
 id: lora-kit-151
-hide_title: true
-title: LoRa Kit 151
-description: LoRa Kit 151 is Ultra-Low-Power and standard LoRaWAN protocol,
+title: Lora Kit 151
+pagination_label: Lora Kit 151
+sidebar_label: Lora Kit 151
+description: Lora Kit 151 Is Ultra-Low-Power And Standard LoRaWAN Protocol,
 image: img/use-the-network/devices/development/heltec/lora-kit-151.png
-sidebar_label: LoRa Kit 151
 slug: /use-the-network/devices/development/heltec/lora-kit-151
 ---
 
