--- a/docs/use-the-network/devices/development/heltec/wireless-shell.mdx
+++ b/docs/use-the-network/devices/development/heltec/wireless-shell.mdx
@@ -1,11 +1,10 @@
 ---
 id: wireless-shell
-hide_title: true
 title: Wireless Shell
-description:
-  “Wireless Shell” is an ESP32-PICO + SX1276 module. provide Wi-Fi, BLE and LoRa solution.
-image: img/use-the-network/devices/development/heltec/wireless-shell.png
+pagination_label: Wireless Shell
 sidebar_label: Wireless Shell
+description:
+image: img/use-the-network/devices/development/heltec/wireless-shell.png
 slug: /use-the-network/devices/development/heltec/wireless-shell
 ---
 
