--- a/docs/use-the-network/devices/development/heltec/wireless-stick-lite.mdx
+++ b/docs/use-the-network/devices/development/heltec/wireless-stick-lite.mdx
@@ -1,12 +1,12 @@
 ---
 id: wireless-stick-lite
-hide_title: true
 title: Wireless Stick Lite (Panda Board)
+pagination_label: Wireless Stick Lite
+sidebar_label: Wireless Stick Lite (Panda Board)
 description:
   Compare with Wireless Stick, “Wireless Stick Lite” has much better low power design (30uA in deep
   sleep)
 image: img/use-the-network/devices/development/heltec/wireless-stick-lite.png
-sidebar_label: Wireless Stick Lite (Panda Board)
 slug: /use-the-network/devices/development/heltec/wireless-stick-lite
 ---
 
