--- a/docs/use-the-network/devices/development/heltec/wireless-stick.mdx
+++ b/docs/use-the-network/devices/development/heltec/wireless-stick.mdx
@@ -1,10 +1,10 @@
 ---
 id: wireless-stick
-hide_title: true
 title: Wireless Stick (Gecko Board)
-description: Wireless Stick (Gecko Board) is high performance and small size
-image: img/use-the-network/devices/development/heltec/wireless-stick.png
+pagination_label: Wireless Stick
 sidebar_label: Wireless Stick (Gecko Board)
+description: Wireless Stick (Gecko Board) Is High Performance And Small Size
+image: img/use-the-network/devices/development/heltec/wireless-stick.png
 slug: /use-the-network/devices/development/heltec/wireless-stick
 ---
 
