--- a/docs/use-the-network/devices/development/mcci/catena4430.mdx
+++ b/docs/use-the-network/devices/development/mcci/catena4430.mdx
@@ -1,12 +1,12 @@
 ---
 id: catena4430
-hide_title: true
 title: Animal Activity Sensor
+pagination_label: Catena4430
+sidebar_label: Animal Activity Sensor
 description:
   Passive Infrared Sensor optimized for monitoring laboratory animals. Includes SD card storage,
   pellet feeder interface, indicator lights.
 image: img/use-the-network/devices/development/mcci/catena4430.jpg
-sidebar_label: Animal Activity Sensor
 slug: /use-the-network/devices/development/mcci/catena4430
 ---
 
