--- a/docs/use-the-network/devices/development/mcci/catena4450.mdx
+++ b/docs/use-the-network/devices/development/mcci/catena4450.mdx
@@ -1,12 +1,12 @@
 ---
 id: catena4450
-hide_title: true
-title: MCCI Catena® 4450 Node
+title: Mcci Catena® 4450 Node
+pagination_label: Catena4450
+sidebar_label: Mcci Catena® 4450 Node
 description:
   General purpose LPWAN building block, open source, user-programmable end-device with sensors and
   support
 image: img/use-the-network/devices/development/mcci/catena4450.jpg
-sidebar_label: MCCI Catena® 4450 Node
 slug: /use-the-network/devices/development/mcci/catena4450
 ---
 
