--- a/docs/use-the-network/devices/development/mcci/catena4470.mdx
+++ b/docs/use-the-network/devices/development/mcci/catena4470.mdx
@@ -1,12 +1,12 @@
 ---
 id: catena4470
-hide_title: true
-title: MCCI Catena® 4470 Node with Modbus
+title: Mcci Catena® 4470 Node With Modbus
+pagination_label: Catena4470
+sidebar_label: Mcci Catena® 4470 Node With Modbus
 description:
   General purpose LPWAN building block, open source, user-programmable end-device with sensors,
   Modbus, and support
 image: img/use-the-network/devices/development/mcci/catena4470.jpg
-sidebar_label: MCCI Catena® 4470 Node with Modbus
 slug: /use-the-network/devices/development/mcci/catena4470
 ---
 
