--- a/docs/use-the-network/devices/development/mcci/model4811.mdx
+++ b/docs/use-the-network/devices/development/mcci/model4811.mdx
@@ -1,10 +1,10 @@
 ---
 id: model4811
-hide_title: true
 title: Model 4811 Remote Power Meter
-description: Real-time power monitor for commercial and residential buildings
-image: img/use-the-network/devices/development/mcci/model4811.jpg
+pagination_label: Model4811
 sidebar_label: Model 4811 Remote Power Meter
+description: Real-Time Power Monitor For Commercial And Residential Buildings
+image: img/use-the-network/devices/development/mcci/model4811.jpg
 slug: /use-the-network/devices/development/mcci/model4811
 ---
 
