--- a/docs/use-the-network/devices/development/mcci/model4832.mdx
+++ b/docs/use-the-network/devices/development/mcci/model4832.mdx
@@ -1,10 +1,10 @@
 ---
 id: model4832
-hide_title: true
-title: Model 4832 High-Accuracy Outdoor Environmental Sensor (SHT35)
-description: Temperature, humidity, light sensor for outdoors (using Sensirion SHT35)
+title: Model 4832 High-Accuracy Outdoor Environmental Sensor (Sht35)
+pagination_label: Model4832
+sidebar_label: Model 4832 High-Accuracy Outdoor Environmental Sensor (Sht35)
+description: Temperature, Humidity, Light Sensor For Outdoors (Using Sensirion Sht35)
 image: img/use-the-network/devices/development/mcci/model483x-closed.jpg
-sidebar_label: Model 4832 High-Accuracy Outdoor Environmental Sensor (SHT35)
 slug: /use-the-network/devices/development/mcci/model4832
 ---
 
