--- a/docs/use-the-network/devices/development/mcci/model4841.mdx
+++ b/docs/use-the-network/devices/development/mcci/model4841.mdx
@@ -1,10 +1,10 @@
 ---
 id: model4841
-hide_title: true
 title: Indoor Air Quality Sensor
-description: PM 2.5, TVOC, temperature, humidity sensor for indoor air quality
-image: img/use-the-network/devices/development/mcci/model4841.jpg
+pagination_label: Model4841
 sidebar_label: Indoor Air Quality Sensor
+description: Pm 2.5, Tvoc, Temperature, Humidity Sensor For Indoor Air Quality
+image: img/use-the-network/devices/development/mcci/model4841.jpg
 slug: /use-the-network/devices/development/mcci/model4841
 ---
 
