--- a/docs/use-the-network/devices/development/midatronics/sharky-module.mdx
+++ b/docs/use-the-network/devices/development/midatronics/sharky-module.mdx
@@ -1,7 +1,8 @@
 ---
 id: sharky-module
-hide_title: true
 title: Sharky
+pagination_label: Sharky Module
+sidebar_label: Sharky
 description:
   The Sharky PCB is an IoT certified module with onboard PCB antenna based on the ST
   Microelectronics STM32WB55CEU6 system on chip, a highly integrated low power radio design with two
@@ -9,7 +10,6 @@ description:
   one ARM Cortex-M0+ 32-bit microprocessor running the radio networking Stack. The Sharky module
   supports BLE, Thread, Zig Bee and generic IEEE 802.15.4 protocol stacks.
 image: img/use-the-network/devices/development/midatronics/sharky-module.png
-sidebar_label: Sharky
 slug: /use-the-network/devices/development/midatronics/sharky-module
 ---
 
