--- a/docs/use-the-network/devices/development/midatronics/windy-mkr.mdx
+++ b/docs/use-the-network/devices/development/midatronics/windy-mkr.mdx
@@ -1,7 +1,8 @@
 ---
 id: windy-mkr
-hide_title: true
-title: MKR WINDY
+title: Mkr Windy
+pagination_label: Windy Mkr
+sidebar_label: Mkr Windy
 description:
   MKR WINDY is an Arduino MKR1000 form factor board based on the Midatronics WINDY Module, an IoT
   module with onboard uFL connector based on the ST Microelectronics STM32WL, System-On-Chip
@@ -12,7 +13,6 @@ description:
   radio based-on Semtech SX126x to meet the requirements of a wide range of Low-Power Wide Area
   Network (LPWAN) wireless applications in industrial and consumer Internet-of-Things (IoT).
 image: img/use-the-network/devices/development/midatronics/windy-mkr.png
-sidebar_label: MKR WINDY
 slug: /use-the-network/devices/development/midatronics/windy-mkr
 ---
 
