--- a/docs/use-the-network/devices/development/midatronics/windy-module.mdx
+++ b/docs/use-the-network/devices/development/midatronics/windy-module.mdx
@@ -1,7 +1,8 @@
 ---
 id: windy-module
-hide_title: true
 title: Windy Module
+pagination_label: Windy Module
+sidebar_label: Windy Module
 description:
   The Windy Module is an IoT module with onboard uFL connector based on the ST Microelectronics
   STM32WL, System-On-Chip integrates both a general purpose microcontroller and a sub-GHz radio on
@@ -12,7 +13,6 @@ description:
   of Low-Power Wide Area Network (LPWAN) wireless applications in industrial and consumer
   Internet-of-Things (IoT).
 image: img/use-the-network/devices/development/midatronics/windy-module.png
-sidebar_label: Windy Module
 slug: /use-the-network/devices/development/midatronics/windy-module
 ---
 
