--- a/docs/use-the-network/devices/development/opensourceinitiative/paxcounter.mdx
+++ b/docs/use-the-network/devices/development/opensourceinitiative/paxcounter.mdx
@@ -1,9 +1,10 @@
 ---
 id: paxcounter
-hide_title: true
-title: Paxcounter (ESP32 Board)
-description: Paxcounter is a ESP32 based device to meter pax flows in realtime
-sidebar_label: Paxcounter (ESP32 Board)
+title: Paxcounter (Esp32 Board)
+pagination_label: Paxcounter
+sidebar_label: Paxcounter (Esp32 Board)
+description: Paxcounter Is A Esp32 Based Device To Meter Pax Flows In Realtime
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/devices/development/opensourceinitiative/paxcounter
 ---
 
