--- a/docs/use-the-network/devices/development/quickstart-guides.mdx
+++ b/docs/use-the-network/devices/development/quickstart-guides.mdx
@@ -1,8 +1,10 @@
 ---
 id: quickstart-guides
-hide_title: true
-hide_table_of_contents: true
+title: Quickstart Guides
+pagination_label: Quickstart Guides
 sidebar_label: Quickstart Guides
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/devices/development/quickstart-guides
 ---
 
