--- a/docs/use-the-network/devices/development/rakwireless/rak7431.mdx
+++ b/docs/use-the-network/devices/development/rakwireless/rak7431.mdx
@@ -1,13 +1,13 @@
 ---
 id: rak7431
-hide_title: true
-title: RAK7431 WisNode Bridge Serial
+title: Rak7431 Wisnode Bridge Serial
+pagination_label: Rak7431
+sidebar_label: Rak7431 Wisnode Bridge Serial
 description:
   RAK7431 WisNode Bridge Serial is an RS485 to LoRaWAN converter designed for industrial
   applications. The device relays ModBUS data using the LoRaWAN network as means of wirelessly
   transmitting to and from the end devices.
 image: img/use-the-network/devices/development/rakwireless/rak7431.png
-sidebar_label: RAK7431 WisNode Bridge Serial
 slug: /use-the-network/devices/development/rakwireless/rak7431
 ---
 
