--- a/docs/use-the-network/devices/development/stmicroelectronics/nucleo-wl55jc2.mdx
+++ b/docs/use-the-network/devices/development/stmicroelectronics/nucleo-wl55jc2.mdx
@@ -1,10 +1,10 @@
 ---
 id: nucleo-wl55jc2
-hide_title: true
-title: NUCLEO-WL55JC2
-description: NUCLEO-WL55JC2 low-band development board with temperature sensor and controllable LEDs
+title: Nucleo-Wl55Jc2
+pagination_label: Nucleo Wl55Jc2
+sidebar_label: Nucleo-Wl55Jc2
+description: Nucleo-Wl55Jc2 Low-Band Development Board With Temperature Sensor And Controllable Leds
 image: img/use-the-network/devices/development/stmicroelectronics/nucleo-wl55jc.jpg
-sidebar_label: NUCLEO-WL55JC2
 slug: /use-the-network/devices/development/stmicroelectronics/nucleo-wl55jc2
 ---
 
