--- a/docs/use-the-network/devices/development/stmicroelectronics/st-b-l072z-lrwan1/st-b-l072z-lrwan1.mdx
+++ b/docs/use-the-network/devices/development/stmicroelectronics/st-b-l072z-lrwan1/st-b-l072z-lrwan1.mdx
@@ -1,7 +1,10 @@
 ---
 id: st-b-l072z-lrwan1
-hide_title: true
-sidebar_label: ST B-L072Z-LRWAN1
+title: St B L072Z Lrwan1
+pagination_label: St B L072Z Lrwan1
+sidebar_label: St B-L072Z-Lrwan1
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/devices/development/stmicroelectronics/st-b-l072z-lrwan1
 ---
 
