--- a/docs/use-the-network/devices/development/embit/emb-lrwl55.mdx
+++ b/docs/use-the-network/devices/development/embit/emb-lrwl55.mdx
@@ -1,14 +1,14 @@
 ---
 id: emb-lrwl55
-hide_title: true
-title: EMB-LRWL55
+title: Emb-Lrwl55
+pagination_label: Emb Lrwl55
+sidebar_label: Emb-Lrwl55
 description:
   EMB-LRWL55 is the first ultra-low-power LoRaWAN® OEM module based on STM's new system-on-chip,
   STM32WL55xx. Its tiny form factor and its capability of working both with 868MHz EU ISM band and
   915MHz US make EMB-LRWL55 the perfect solution for small and battery powered LoRaWAN® end-devices,
   with the possibility to interface any kind of sensors.
 image: img/use-the-network/devices/development/embit/emb-lrwl55-top.jpg
-sidebar_label: EMB-LRWL55
 slug: /use-the-network/devices/development/embit/emb-lrwl55
 ---
 
