--- a/docs/use-the-network/devices/development/heltec/cubecell-dev-board-plus.mdx
+++ b/docs/use-the-network/devices/development/heltec/cubecell-dev-board-plus.mdx
@@ -1,12 +1,12 @@
 ---
 id: cubecell-dev-board-plus
-hide_title: true
-title: HTCC-AB02
+title: Htcc-Ab02
+pagination_label: Cubecell Dev Board Plus
+sidebar_label: Htcc-Ab02
 description:
   HTCC-AB02 is a Dev-Board. Friendly designed for developers, easy to verify communication
   solutions.
 image: img/use-the-network/devices/development/heltec/cubecell-dev-board-plus.png
-sidebar_label: HTCC-AB02
 slug: /use-the-network/devices/development/heltec/cubecell-dev-board-plus
 ---
 
