--- a/docs/use-the-network/devices/development/heltec/cubecell-gps-6502.mdx
+++ b/docs/use-the-network/devices/development/heltec/cubecell-gps-6502.mdx
@@ -1,12 +1,12 @@
 ---
 id: cubecell-gps-6502
-hide_title: true
-title: HTCC-AB02S
+title: Htcc-Ab02S
+pagination_label: Cubecell GPS 6502
+sidebar_label: Htcc-Ab02S
 description:
   HTCC-AB02S is a Dev-Board. Already integrated AIR530 GPS module, friendly designed for developers,
   easy to verify communication solutions.
 image: img/use-the-network/devices/development/heltec/cubecell-gps-6502.png
-sidebar_label: HTCC-AB02S
 slug: /use-the-network/devices/development/heltec/cubecell-gps-6502
 ---
 
