--- a/docs/use-the-network/devices/development/heltec/cubecell-solar-sensor.mdx
+++ b/docs/use-the-network/devices/development/heltec/cubecell-solar-sensor.mdx
@@ -1,12 +1,12 @@
 ---
 id: cubecell-solar-sensor
-hide_title: true
-title: HTCC-AC02
+title: Htcc-Ac02
+pagination_label: Cubecell Solar Sensor
+sidebar_label: Htcc-Ac02
 description:
   HTCC-AC02 is a LoRa end node sensor. With a complete enclosure and protection measures, it can be
   deployed directly into real-world applications.
 image: img/use-the-network/devices/development/heltec/cubecell-solar-sensor.png
-sidebar_label: HTCC-AC02
 slug: /use-the-network/devices/development/heltec/cubecell-solar-sensor
 ---
 
