--- a/docs/use-the-network/devices/development/heltec/lora-node-151.mdx
+++ b/docs/use-the-network/devices/development/heltec/lora-node-151.mdx
@@ -1,12 +1,12 @@
 ---
 id: lora-node-151
-hide_title: true
-title: LoRa Node 151
+title: Lora Node 151
+pagination_label: Lora Node 151
+sidebar_label: Lora Node 151
 description:
   LoRa Node 151， adopting the STM32L151CCU6 MCU (support DFU mode) and SX127x LoRa chip, use 1/2 AA
   Lithium chlorine sulfite battery
 image: img/use-the-network/devices/development/heltec/lora-node-151.png
-sidebar_label: LoRa Node 151
 slug: /use-the-network/devices/development/heltec/lora-node-151
 ---
 
