--- a/docs/use-the-network/devices/development/heltec/turtle-board.mdx
+++ b/docs/use-the-network/devices/development/heltec/turtle-board.mdx
@@ -1,12 +1,12 @@
 ---
 id: turtle-board
-hide_title: true
 title: Turtle Board
+pagination_label: Turtle Board
+sidebar_label: Turtle Board
 description:
   The turnkey Turtle board solution can be used immediately. Support standard LoRaWAN protocol and
   RadioShuttle protocol.
 image: img/use-the-network/devices/development/heltec/turtle-board.png
-sidebar_label: Turtle Board
 slug: /use-the-network/devices/development/heltec/turtle-board
 ---
 
