--- a/docs/use-the-network/devices/development/heltec/wifi-lora-32-v2/wifi-lora-32-v2.mdx
+++ b/docs/use-the-network/devices/development/heltec/wifi-lora-32-v2/wifi-lora-32-v2.mdx
@@ -1,7 +1,10 @@
 ---
 id: wifi-lora-32-v2
-hide_title: true
-sidebar_label: WiFi LoRa 32 V2
+title: Wifi Lora 32 V2
+pagination_label: Wifi Lora 32 V2
+sidebar_label: Wifi Lora 32 V2
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/devices/development/heltec/wifi-lora-32-v2
 ---
 
