--- a/docs/use-the-network/devices/development/mcci/catena4460.mdx
+++ b/docs/use-the-network/devices/development/mcci/catena4460.mdx
@@ -1,12 +1,12 @@
 ---
 id: catena4460
-hide_title: true
-title: MCCI Catena® 4460 Node
+title: Mcci Catena® 4460 Node
+pagination_label: Catena4460
+sidebar_label: Mcci Catena® 4460 Node
 description:
   General purpose LPWAN building block, open source, user-programmable end-device with VOC sensor
   and support
 image: img/use-the-network/devices/development/mcci/catena4450.jpg
-sidebar_label: MCCI Catena® 4460 Node
 slug: /use-the-network/devices/development/mcci/catena4460
 ---
 
