--- a/docs/use-the-network/devices/development/mcci/catena4610.mdx
+++ b/docs/use-the-network/devices/development/mcci/catena4610.mdx
@@ -1,12 +1,12 @@
 ---
 id: catena4610
-hide_title: true
-title: MCCI Catena® 4610 Node
+title: Mcci Catena® 4610 Node
+pagination_label: Catena4610
+sidebar_label: Mcci Catena® 4610 Node
 description:
   General purpose LPWAN building block, open source, user-programmable single-board end-device with
   sensors and support
 image: img/use-the-network/devices/development/mcci/catena4610.jpg
-sidebar_label: MCCI Catena® 4610 Node
 slug: /use-the-network/devices/development/mcci/catena4610
 ---
 
