--- a/docs/use-the-network/devices/development/mcci/catena4612.mdx
+++ b/docs/use-the-network/devices/development/mcci/catena4612.mdx
@@ -1,12 +1,12 @@
 ---
 id: catena4612
-hide_title: true
-title: MCCI Catena® 4612 Node
+title: Mcci Catena® 4612 Node
+pagination_label: Catena4612
+sidebar_label: Mcci Catena® 4612 Node
 description:
   General purpose LPWAN building block, open source, user-programmable single-board end-device with
   sensors and support
 image: img/use-the-network/devices/development/mcci/catena4612.jpg
-sidebar_label: MCCI Catena® 4612 Node
 slug: /use-the-network/devices/development/mcci/catena4612
 ---
 
