--- a/docs/use-the-network/devices/development/mcci/catena4618m201.mdx
+++ b/docs/use-the-network/devices/development/mcci/catena4618m201.mdx
@@ -1,12 +1,12 @@
 ---
 id: catena4618m201
-hide_title: true
-title: MCCI Catena® 4618 M201 Node
+title: Mcci Catena® 4618 M201 Node
+pagination_label: Catena4618M201
+sidebar_label: Mcci Catena® 4618 M201 Node
 description:
   High accuracy LPWAN building block, open source, user-programmable single-board end-device with
   sensors and support
 image: img/use-the-network/devices/development/mcci/catena4618.jpg
-sidebar_label: MCCI Catena® 4618 M201 Node
 slug: /use-the-network/devices/development/mcci/catena4618m201
 ---
 
