--- a/docs/use-the-network/devices/development/mcci/catena4801.mdx
+++ b/docs/use-the-network/devices/development/mcci/catena4801.mdx
@@ -1,12 +1,12 @@
 ---
 id: catena4801
-hide_title: true
-title: MCCI Catena® 4801 Modbus Node
+title: Mcci Catena® 4801 Modbus Node
+pagination_label: Catena4801
+sidebar_label: Mcci Catena® 4801 Modbus Node
 description:
   General purpose LPWAN building block, open source, user-programmable single-board end-device with
   RS-485 Modbus interface and support
 image: img/use-the-network/devices/development/mcci/catena4801.jpg
-sidebar_label: MCCI Catena® 4801 Modbus Node
 slug: /use-the-network/devices/development/mcci/catena4801
 ---
 
