--- a/docs/use-the-network/devices/development/mcci/catena4802.mdx
+++ b/docs/use-the-network/devices/development/mcci/catena4802.mdx
@@ -1,13 +1,13 @@
 ---
 id: catena4802
-hide_title: true
-title: MCCI Catena® 4802 Modbus/Sensor Node
+title: Mcci Catena® 4802 Modbus/Sensor Node
+pagination_label: Catena4802
+sidebar_label: Mcci Catena® 4802 Modbus/Sensor Node
 description:
   General purpose LPWAN building block, open source, user-programmable single-board end-device with
   RS-485 Modbus interface, I2C bridge with Qwicc connector, integrated temperature and humidity
   sensor, and support
 image: img/use-the-network/devices/development/mcci/catena4802.jpg
-sidebar_label: MCCI Catena® 4802 Modbus/Sensor Node
 slug: /use-the-network/devices/development/mcci/catena4802
 ---
 
