--- a/docs/use-the-network/devices/development/mcci/model4821.mdx
+++ b/docs/use-the-network/devices/development/mcci/model4821.mdx
@@ -1,10 +1,10 @@
 ---
 id: model4821
-hide_title: true
-title: Model 4821 Indoor Environmental Sensor (BME280)
-description: temperature, humidity, barometer, light sensor for indoor spaces
+title: Model 4821 Indoor Environmental Sensor (Bme280)
+pagination_label: Model4821
+sidebar_label: Model 4821 Indoor Environmental Sensor (Bme280)
+description: Temperature, Humidity, Barometer, Light Sensor For Indoor Spaces
 image: img/use-the-network/devices/development/mcci/model482x.jpg
-sidebar_label: Model 4821 Indoor Environmental Sensor (BME280)
 slug: /use-the-network/devices/development/mcci/model4821
 ---
 
