--- a/docs/use-the-network/devices/development/mcci/model4822.mdx
+++ b/docs/use-the-network/devices/development/mcci/model4822.mdx
@@ -1,11 +1,11 @@
 ---
 id: model4822
-hide_title: true
-title: Model 4822 Indoor Environmental Sensor (SHT31)
+title: Model 4822 Indoor Environmental Sensor (Sht31)
+pagination_label: Model4822
+sidebar_label: Model 4822 Indoor Environmental Sensor (Sht31)
 description:
   Higher-accuracy temperature, humidity, light sensor for indoor spaces (using Sensirion SHT31)
 image: img/use-the-network/devices/development/mcci/model482x.jpg
-sidebar_label: Model 4822 Indoor Environmental Sensor (SHT31)
 slug: /use-the-network/devices/development/mcci/model4822
 ---
 
