--- a/docs/use-the-network/devices/development/mcci/model4823.mdx
+++ b/docs/use-the-network/devices/development/mcci/model4823.mdx
@@ -1,10 +1,10 @@
 ---
 id: model4823
-hide_title: true
-title: Model 4823 Precision Indoor Environmental Sensor (with SHT35)
-description: Precision temperature, humidity, light sensor for indoor spaces.
+title: Model 4823 Precision Indoor Environmental Sensor (With Sht35)
+pagination_label: Model4823
+sidebar_label: Model 4823 Precision Indoor Environmental Sensor (With Sht35)
+description: Precision Temperature, Humidity, Light Sensor For Indoor Spaces.
 image: img/use-the-network/devices/development/mcci/model482x.jpg
-sidebar_label: Model 4823 Precision Indoor Environmental Sensor (with SHT35)
 slug: /use-the-network/devices/development/mcci/model4823
 ---
 
