--- a/docs/use-the-network/devices/development/mcci/model4831.mdx
+++ b/docs/use-the-network/devices/development/mcci/model4831.mdx
@@ -1,10 +1,10 @@
 ---
 id: model4831
-hide_title: true
-title: Model 4831 Outdoor Environmental Sensor (SHT31)
-description: Temperature, humidity, light sensor for outdoors (using Sensirion SHT31)
+title: Model 4831 Outdoor Environmental Sensor (Sht31)
+pagination_label: Model4831
+sidebar_label: Model 4831 Outdoor Environmental Sensor (Sht31)
+description: Temperature, Humidity, Light Sensor For Outdoors (Using Sensirion Sht31)
 image: img/use-the-network/devices/development/mcci/model483x-closed.jpg
-sidebar_label: Model 4831 Outdoor Environmental Sensor (SHT31)
 slug: /use-the-network/devices/development/mcci/model4831
 ---
 
