--- a/docs/use-the-network/devices/development/multi-tech/multi-tech-xdot.mdx
+++ b/docs/use-the-network/devices/development/multi-tech/multi-tech-xdot.mdx
@@ -1,13 +1,13 @@
 ---
 id: multi-tech-xdot
-hide_title: true
-title: MultiTech xDot® Long Range LoRa Module
+title: Multitech Xdot® Long Range Lora Module
+pagination_label: Multi Tech Xdot
+sidebar_label: Multitech Xdot® Long Range Lora Module
 description:
   MultiTech xDot®is a secure, end-certified, Arm®Mbed™programmable, low-power RF module, that
   provides long-range, low bit rate M2M data connectivity to sensors, industrial equipment and
   remote appliances.
 image: img/use-the-network/devices/development/multi-tech/multi-tech-xdot.png
-sidebar_label: MultiTech xDot® Long Range LoRa Module
 slug: /use-the-network/devices/development/multi-tech/multi-tech-xdot
 ---
 
