--- a/docs/use-the-network/devices/development/rakwireless/wisblock-4631/wisblock-4631.mdx
+++ b/docs/use-the-network/devices/development/rakwireless/wisblock-4631/wisblock-4631.mdx
@@ -1,12 +1,12 @@
 ---
 id: wisblock-4631
-hide_title: true
-title: Wisblock Starter Kit RAK4631
+title: Wisblock Starter Kit Rak4631
+pagination_label: Wisblock 4631
+sidebar_label: Wisblock Starter Kit Rak4631
 description:
   The RAK4631 WisBlock Starter Kit delivers a powerful Nordic nRF52840 MCU with Bluetooth 5 paired
   to the latest LoRa® transceivers from Semtech, the SX126x series.
 image: img/use-the-network/devices/development/rakwireless/wisblock-starter-kit.png
-sidebar_label: Wisblock Starter Kit RAK4631
 slug: /use-the-network/devices/development/rakwireless/wisblock-4631
 ---
 
