--- a/docs/use-the-network/devices/development/seeed-studio/loramodule-e5.mdx
+++ b/docs/use-the-network/devices/development/seeed-studio/loramodule-e5.mdx
@@ -1,14 +1,14 @@
 ---
 id: loramodule-e5
-hide_title: true
-title: Wio-E5 Wireless Module, for Long Range Application
+title: Wio-E5 Wireless Module, For Long Range Application
+pagination_label: Loramodule E5
+sidebar_label: Wio-E5 Stm32Wle5Jc Module
 description:
   Wio-E5 LoRaWAN® module is designed with ST system-level package chip STM32WLE5JC, ARM Cortex M4
   ultra-low-power MCU and LoRa® SX126X. It supports (G)FSK mode and LoRa®. 62.5kHz, 125kHz, 250kHz,
   and 500kHz bandwidth can be used in LoRa® mode, making it suitable for the design of various IoT
   nodes, supporting EU868 and US915.
 image: img/use-the-network/devices/development/seeed-studio/loramodule-e5.jpg
-sidebar_label: Wio-E5 STM32WLE5JC Module
 slug: /use-the-network/devices/development/seeed-studio/loramodule-e5
 ---
 
