--- a/docs/use-the-network/devices/development/seeed-studio/seeed-studio-lorawan-dev-kit.mdx
+++ b/docs/use-the-network/devices/development/seeed-studio/seeed-studio-lorawan-dev-kit.mdx
@@ -1,13 +1,13 @@
 ---
 id: seeed-studio-lorawan-dev-kit
-hide_title: true
-title: SenseCAP K1100 - The Sensor Prototype Kit with LoRa® and AI
+title: Sensecap K1100 - The Sensor Prototype Kit With Lora® And Ai
+pagination_label: Seeed Studio LoRaWAN Dev Kit
+sidebar_label: Sensecap K1100 - The Sensor Prototype Kit With Lora® And Ai
 description:
   SenseCAP K1100 - The Sensor Prototype Kit with LoRa® and AI, it enables you to rapidly digitize
   the world using LoRaWAN® and solve real-world challenges. With this plug-and-play toolkit, anyone
   can add AI to their edge devices and unlock the potential of AIoT.
 image: img/use-the-network/devices/ready-to-use/seeed-studio/seeed-studio-lorawan-dev-kit.jpeg
-sidebar_label: SenseCAP K1100 - The Sensor Prototype Kit with LoRa® and AI
 slug: /use-the-network/devices/ready-to-use/seeed-studio/seeed-studio-lorawan-dev-kit
 ---
 
