--- a/docs/use-the-network/devices/development/sparkfun/pro-rf/pro-rf.mdx
+++ b/docs/use-the-network/devices/development/sparkfun/pro-rf/pro-rf.mdx
@@ -1,7 +1,10 @@
 ---
 id: pro-rf
-hide_title: true
-sidebar_label: Sparkfun Pro RF
+title: Pro Rf
+pagination_label: Pro Rf
+sidebar_label: Sparkfun Pro Rf
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/devices/development/sparkfun/pro-rf
 ---
 
