--- a/docs/use-the-network/devices/development/stmicroelectronics/nucleo-wl55jc1.mdx
+++ b/docs/use-the-network/devices/development/stmicroelectronics/nucleo-wl55jc1.mdx
@@ -1,11 +1,11 @@
 ---
 id: nucleo-wl55jc1
-hide_title: true
-title: NUCLEO-WL55JC1
+title: Nucleo-Wl55Jc1
+pagination_label: Nucleo Wl55Jc1
+sidebar_label: Nucleo-Wl55Jc1
 description:
   NUCLEO-WL55JC1 high-band development board with temperature sensor and controllable LEDs
 image: img/use-the-network/devices/development/stmicroelectronics/nucleo-wl55jc.jpg
-sidebar_label: NUCLEO-WL55JC1
 slug: /use-the-network/devices/development/stmicroelectronics/nucleo-wl55jc1
 ---
 
