--- a/docs/use-the-network/devices/development/arduino/lora-vision-shield/lora-vision-shield.mdx
+++ b/docs/use-the-network/devices/development/arduino/lora-vision-shield/lora-vision-shield.mdx
@@ -1,13 +1,13 @@
 ---
 id: lora-vision-shield
-hide_title: true
-title: Portenta Vision Shield LoRa®
+title: Portenta Vision Shield Lora®
+pagination_label: Lora Vision Shield
+sidebar_label: Portenta Vision Shield Lora®
 description:
   A rapid solution for embedded ML combining vision, audio and connectivity - Detect Gestures,
   Identify Objects, See Things. The Vision shield features a 324x324 pixels camera module containing
   an Ultra Low Power Image Sensor designed for Always-on vision devices and applications.
 image: /static/img/use-the-network/devices/development/arduino/camera_shield1.jpg
-sidebar_label: Portenta Vision Shield LoRa®
 slug: /use-the-network/devices/development/arduino/lora-vision-shield
 ---
 
