--- a/docs/use-the-network/devices/development/heltec/wireless-shell.mdx
+++ b/docs/use-the-network/devices/development/heltec/wireless-shell.mdx
@@ -4,6 +4,7 @@ title: Wireless Shell
 pagination_label: Wireless Shell
 sidebar_label: Wireless Shell
 description:
+  “Wireless Shell” is an ESP32-PICO + SX1276 module. provide Wi-Fi, BLE and LoRa solution.
 image: img/use-the-network/devices/development/heltec/wireless-shell.png
 slug: /use-the-network/devices/development/heltec/wireless-shell
 ---
