--- a/docs/use-the-network/devices/ready-to-use/boatofficer/boatofficerblue.mdx
+++ b/docs/use-the-network/devices/ready-to-use/boatofficer/boatofficerblue.mdx
@@ -4,6 +4,9 @@ title: Boatofficer Blue
 pagination_label: Boatofficer Blue
 sidebar_label: Boatofficer Blue
 description:
+  With BoatOfficer Blue you can monitor your boat, while you’re not around. E.g. position, battery
+  voltage and temperature are send via TheThingsNetwork to the BoatOfficer app on your phone. Events
+  like water ingress detection trigger an immediate push notification.
 image: img/use-the-network/devices/ready-to-use/boatofficer/boatofficerblue_leftside.png
 slug: /use-the-network/devices/ready-to-use/boatofficer/boatofficerblue
 ---
