--- a/docs/open-source/docs-installation.mdx
+++ b/docs/open-source/docs-installation.mdx
@@ -1,11 +1,11 @@
 ---
-id: installation
+id: docs-installation
 title: Installation
 pagination_label: Installation
 sidebar_label: Installation Guide
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
-slug: /open-source/docs/installation
+slug: /open-source/docs-installation
 ---
 
 # Helium Documentation Installation Guide
