prettier line wraps

--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -53,8 +53,8 @@ You should [setup a packet forwarder](/use-the-network/setup-a-packet-forwarder)
 [light hotspot client](/mine-hnt/light-hotspots).
 
 In addition, you should setup a [CLI wallet](/wallets/cli-wallet) as this is currently the only
-wallet that supports DIY Data Only Hotspots.
-Retail Data Only Hotspots from Hotspot Vendors can be onboarded using the Vendor IOS and Android apps.
+wallet that supports DIY Data Only Hotspots. Retail Data Only Hotspots from Hotspot Vendors can be
+onboarded using the Vendor IOS and Android apps.
 
 **Note**: you can import a mobile wallet to the CLI. **Another note**: you should **not** install
 the CLI on your gateway
