--- a/docs/use-the-network/devices/development/seeed-studio/loramodule-e5-devkit.mdx
+++ b/docs/use-the-network/devices/development/seeed-studio/loramodule-e5-devkit.mdx
@@ -18,9 +18,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## Wio-E5 Development Kit
 
-Wio-E5 Development Kit consists of a Wio-E5 Dev Board, an antenna(EU868/US915), a USB type C
-cable, and a 2\*AA 3V Battery Holder. Wio-E5 Dev Board embedded with Wio-E5 STM32WLE5JC Module
-that supports LoRaWAN® protocol on global frequency band. It is user-friendly since it leads out full
+Wio-E5 Development Kit consists of a Wio-E5 Dev Board, an antenna(EU868/US915), a USB type C cable,
+and a 2\*AA 3V Battery Holder. Wio-E5 Dev Board embedded with Wio-E5 STM32WLE5JC Module that
+supports LoRaWAN® protocol on global frequency band. It is user-friendly since it leads out full
 GPIOs of Wio-E5 supporting various data protocols and interfaces including RS-485, Grove,
 male/female headers, etc. It would be a perfect choice for fast testing and rapid prototyping of
 your LoRa® IoT projects.
