--- a/docs/use-the-network/roaming.mdx
+++ b/docs/use-the-network/roaming.mdx
@@ -140,7 +140,9 @@ receive alerts.
 To set up email alerts: click **Alerts**, choose alert and user role to receive alerts.
 
 ## Sample JSON
-Here are some sample JSON payloads that roaming partners can expect to receive on their roaming endpoint.
+
+Here are some sample JSON payloads that roaming partners can expect to receive on their roaming
+endpoint.
 
 ### Sample Uplink
 
