--- a/docs/use-the-network/devices/development/seeed-studio/loramodule-e5-grove.mdx
+++ b/docs/use-the-network/devices/development/seeed-studio/loramodule-e5-grove.mdx
@@ -15,8 +15,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## Wio-E5 Grove
 
-Grove Wio-E5 embedded with Wio-E5 STM32WLE5JC, powered by ARM Cortex M4 ultra-low-power MCU core
-and LoRa® SX126x, is an easy-to-use wireless radio module, supporting LoRaWAN® protocol on the EU868 &
+Grove Wio-E5 embedded with Wio-E5 STM32WLE5JC, powered by ARM Cortex M4 ultra-low-power MCU core and
+LoRa® SX126x, is an easy-to-use wireless radio module, supporting LoRaWAN® protocol on the EU868 &
 US915 frequency and (G)FSK, BPSK, (G)MSK, LoRa® modulations.
 
 <img
